refactor: оптимизировать метод add, организовать LIFO